<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="quantity_number">1</string>
    <string name="plus">+</string>
    <string name="Order_Summary">Order Summary</string>
    <string name="initial_price">$2</string>
    <string name="order">ORDER</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_your_coffee">Choose your Coffee</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="name">Name</string>

    <string-array name="names">
        <item>Espresso</item>
        <item>Macchiato</item>
        <item>Cafe Latte</item>
        <item>Cappuccino</item>
        <item>Mocha</item>
    </string-array>
</resources>
